--- a/modules/effects/arrow-effects-kotlinx-coroutines/build.gradle
+++ b/modules/effects/arrow-effects-kotlinx-coroutines/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     kaptTest project(':arrow-annotations-processor')
     compileOnly project(':arrow-annotations-processor')
     testCompileOnly project(':arrow-annotations-processor')
+    testCompile project(':arrow-effects-kotlinx-coroutines-instances')
     testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
     testCompile project(':arrow-test')
 
