Fix Travis timeouts because no output was received

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,6 @@ jobs:
    script:
    - aws s3 sync s3://$S3_BUCKET/site ~/site > aws_sync_jekyll.log
    - rvm use 2.5.3 --install --fuzzy
-   - bundle install --gemfile modules/docs/arrow-docs/Gemfile --path vendor/bundle   
-   - bundle exec jekyll build -s ~/site -d ~/_site
+   - bundle install --gemfile modules/docs/arrow-docs/Gemfile --path vendor/bundle
+   - travis_wait BUNDLE_GEMFILE=modules/docs/arrow-docs/Gemfile bundle exec jekyll build -s ~/site -d ~/_site
    - aws s3 sync ~/_site s3://$S3_BUCKET > aws_sync_site.log
