--- a/.travis.yml
+++ b/.travis.yml
@@ -32,11 +32,11 @@ jobs:
    script:
    # redirecting outputs to files to avoid exceeding travis' logs limit
    - ./gradlew clean build > build.log
-   - ./gradlew dokka :arrow-docs:runAnk > run_ank.log
+   - travis_wait 30 ./gradlew dokka :arrow-docs:runAnk > run_ank.log
  - stage: build-and-dokka-transfer
    script:
    - ./gradlew clean build > build.log
-   - ./gradlew dokka :arrow-docs:runAnk > run_ank.log
+   - travis_wait 30 ./gradlew dokka :arrow-docs:runAnk > run_ank.log
    - aws s3 sync modules/docs/arrow-docs/build/site s3://$S3_BUCKET/site > aws_sync_dokka.log
  - stage: coverage-report
    script:
