--- a/.travis.yml
+++ b/.travis.yml
@@ -32,11 +32,11 @@ jobs:
    script:
    # redirecting outputs to files to avoid exceeding travis' logs limit
    - ./gradlew clean build > build.log
-   - travis_wait 30 ./gradlew dokka :arrow-docs:runAnk > run_ank.log
+   - ./gradlew dokka :arrow-docs:runAnk > run_ank.log
  - stage: build-and-dokka-transfer
    script:
    - ./gradlew clean build > build.log
-   - travis_wait 30 ./gradlew dokka :arrow-docs:runAnk > run_ank.log
+   - ./gradlew dokka :arrow-docs:runAnk > run_ank.log
    - aws s3 sync modules/docs/arrow-docs/build/site s3://$S3_BUCKET/site > aws_sync_dokka.log
  - stage: coverage-report
    script:
@@ -50,5 +50,5 @@ jobs:
    - aws s3 sync s3://$S3_BUCKET/site ~/site > aws_sync_jekyll.log
    - rvm use 2.5.3 --install --fuzzy
    - bundle install --gemfile modules/docs/arrow-docs/Gemfile --path vendor/bundle
-   - travis_wait BUNDLE_GEMFILE=modules/docs/arrow-docs/Gemfile bundle exec jekyll build -s ~/site -d ~/_site
+   - travis_wait 10 BUNDLE_GEMFILE=modules/docs/arrow-docs/Gemfile bundle exec jekyll build -s ~/site -d ~/_site
    - aws s3 sync ~/_site s3://$S3_BUCKET > aws_sync_site.log
