--- a/.travis.yml
+++ b/.travis.yml
@@ -31,12 +31,12 @@ jobs:
  - stage: build-and-dokka
    script:
    # redirecting outputs to files to avoid exceeding travis' logs limit
-   - ./gradlew clean build > build.log
-   - ./gradlew dokka :arrow-docs:runAnk > run_ank.log
+   - ./gradlew clean build
+   - ./gradlew dokka :arrow-docs:runAnk
  - stage: build-and-dokka-transfer
    script:
-   - ./gradlew clean build > build.log
-   - ./gradlew dokka :arrow-docs:runAnk > run_ank.log
+   - ./gradlew clean build
+   - ./gradlew dokka :arrow-docs:runAnk
    - aws s3 sync modules/docs/arrow-docs/build/site s3://$S3_BUCKET/site > aws_sync_dokka.log
  - stage: coverage-report
    script:
