Adding JAVA_OPTS to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
  global:
  # include $HOME/.local/bin for `aws`
  - PATH=$HOME/.local/bin:$PATH
+ - JAVA_OPTS="-Xms512m -Xmx1024m"
 
 before_install:
 - pip install --user awscli
