--- a/.travis.yml
+++ b/.travis.yml
@@ -51,5 +51,6 @@ jobs:
    - aws s3 sync s3://$S3_BUCKET/site ~/site > aws_sync_jekyll.log
    - rvm use 2.5.3 --install --fuzzy
    - bundle install --gemfile modules/docs/arrow-docs/Gemfile --path vendor/bundle
-   - travis_wait 10 BUNDLE_GEMFILE=modules/docs/arrow-docs/Gemfile bundle exec jekyll build -s ~/site -d ~/_site
+   - export BUNDLE_GEMFILE=modules/docs/arrow-docs/Gemfile
+   - travis_wait 10 bundle exec jekyll build -s ~/site -d ~/_site
    - aws s3 sync ~/_site s3://$S3_BUCKET > aws_sync_site.log
