--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ jobs:
    - ./gradlew dokka :arrow-docs:runAnk
  - stage: build-and-dokka-transfer
    script:
+   - ./gradlew checkDependenciesVersion
    - ./gradlew clean build
    - ./gradlew dokka :arrow-docs:runAnk
    - aws s3 sync modules/docs/arrow-docs/build/site s3://$S3_BUCKET/site > aws_sync_dokka.log
