--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jdk:
 
 before_script:
   - "echo $JAVA_OPTS"
-  - "export JAVA_OPTS=-Xmx4g"
+  - "export JAVA_OPTS=-Xmx4g -XX:-UseGCOverheadLimit"
 
 stages:
 - name: build-and-dokka
