attempt to change runAnk memory params in travis so it does not OOMs

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
  global:
  # include $HOME/.local/bin for `aws`
  - PATH=$HOME/.local/bin:$PATH
- - JAVA_OPTS="-Xms512m -Xmx1024m"
+ - JAVA_OPTS="-Xms1024m -Xmx4g -XX:MaxPermSize=1g"
 
 before_install:
 - pip install --user awscli
