--- a/.travis.yml
+++ b/.travis.yml
@@ -32,15 +32,15 @@ jobs:
  - stage: build-and-dokka
    script:
    # redirecting outputs to files to avoid exceeding travis' logs limit
-   - ./gradlew clean build
-   - ./gradlew dokka
-   - ./gradlew :arrow-docs:runAnk -Dorg.gradle.jvmargs="-Xms1024m -Xmx4g -XX:MaxPermSize=1g"
+   #- ./gradlew clean build
+   #- ./gradlew dokka
+   - ./gradlew clean dokka :arrow-docs:runAnk --no-daemon -Dorg.gradle.jvmargs="-Xms4g -Xmx4g -XX:MaxPermSize=3g"
  - stage: build-and-dokka-transfer
    script:
    - ./gradlew checkDependenciesVersion
    - ./gradlew clean build
    - ./gradlew dokka
-   - ./gradlew :arrow-docs:runAnk -Dorg.gradle.jvmargs="-Xms1024m -Xmx4g -XX:MaxPermSize=1g"
+   - ./gradlew :arrow-docs:runAnk --no-daemon -Dorg.gradle.jvmargs="-Xms4g -Xmx4g -XX:MaxPermSize=3g"
    - aws s3 sync modules/docs/arrow-docs/build/site s3://$S3_BUCKET/site > aws_sync_dokka.log
  - stage: coverage-report
    script:
