use oracle jdk in circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: ~/arrow
     docker:
-      - image: circleci/openjdk
+      - image: circleci/openjdk:8-jdk
     steps:
       - checkout
       - run:
