--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ jobs:
       - checkout
       - run:
           name: Build and Docs
-          command: ./gradlew clean build dokka :arrow-docs:runAnk -Dkotlin.compiler.execution.strategy=in-process
+          command: ./gradlew clean build dokka :arrow-docs:runAnk --no-daemon -Dorg.gradle.jvmargs="-Xms4g -Xmx4g -XX:MaxPermSize=3g" -Dkotlin.compiler.execution.strategy=in-process
