Change mem config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     environment:
-      GRADLE_OPTS: '-Dkotlin.compiler.execution.strategy=“in-process”'
+      _JAVA_OPTIONS: "-Xms512m -Xmx2048m"
+      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError" -Dkotlin.compiler.execution.strategy=“in-process”'
     steps:
       - checkout
       - run:
