Don't combine JVM and gradle options

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     environment:
-      _JAVA_OPTIONS: "-Xms512m -Xmx2048m"
-      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError" -Dkotlin.compiler.execution.strategy=“in-process”'
+      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xms512m -Xmx2048m -XX:+HeapDumpOnOutOfMemoryError" -Dkotlin.compiler.execution.strategy=“in-process”'
     steps:
       - checkout
       - run:
