Set max workers and decrease

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,9 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
     environment:
-      _JAVA_OPTIONS: -Xms512m -Xmx2048m
-      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xms512m -Xmx2048m -XX:+HeapDumpOnOutOfMemoryError" -Dorg.gradle.properties.parallel=false -Dorg.gradle.configureondemand=false -Dkotlin.compiler.execution.strategy=“in-process”'
+      GRADLE_OPTS: -Xmx1024m -Dorg.gradle.daemon=false
     steps:
       - checkout
       - run:
           name: Clean build
-          command: ./gradlew --no-daemon clean build
+          command: ./gradlew --no-daemon --max-workers 2 clean build
