--- a/modules/docs/arrow-docs/build.gradle
+++ b/modules/docs/arrow-docs/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile project(':arrow-integrations-retrofit-adapter')
     compile project(':arrow-mtl')
     compile project(':arrow-free')
+    compile project(':arrow-instances-free')
     compile project(':arrow-typeclasses')
     compile project(':arrow-generic')
     compile project(':arrow-query-language')
