Aid diagnosis of test failures by showing full exception details

--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,7 @@ subprojects { project ->
 
     test {
         testLogging {
+            exceptionFormat 'full'
             events "passed", "skipped", "failed", "standardOut", "standardError"
         }
     }
