--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Package definitions
 GROUP=io.arrow-kt
-VERSION_NAME=0.8.2
+VERSION_NAME=0.8.3-SNAPSHOT
 # Gradle options
 org.gradle.jvmargs=-Xmx4g
 # Kotlin configuration
