--- a/modules/free/arrow-free/build.gradle
+++ b/modules/free/arrow-free/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     testCompileOnly project(':arrow-annotations-processor')
     testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
     testCompile project(':arrow-test')
-    testCompile project(':arrow-instances-free')
+    testCompile project(':arrow-free-extensions')
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
