--- a/modules/effects/arrow-data-instances-effects/build.gradle
+++ b/modules/effects/arrow-data-instances-effects/build.gradle
@@ -8,7 +8,8 @@ dependencies {
     kaptTest project(':arrow-annotations-processor')
     compileOnly project(':arrow-annotations-processor')
     testCompileOnly project(':arrow-annotations-processor')
-    testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
+    testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
+    testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
 }
 
