--- a/modules/effects/arrow-effects-rx2-instances/build.gradle
+++ b/modules/effects/arrow-effects-rx2-instances/build.gradle
@@ -6,7 +6,8 @@ dependencies {
     kaptTest project(':arrow-annotations-processor')
     compileOnly project(':arrow-annotations-processor')
     testCompileOnly project(':arrow-annotations-processor')
-    testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
+    testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
+    testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
 
     compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
