--- a/modules/streams/arrow-streams/build.gradle
+++ b/modules/streams/arrow-streams/build.gradle
@@ -2,7 +2,8 @@ dependencies {
     compile project(':arrow-effects')
     compile project(':arrow-instances-data')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
+    testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
+    testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
     testCompile project(':arrow-effects-instances')
 
