--- a/modules/effects/arrow-effects-kotlinx-coroutines-extensions/build.gradle
+++ b/modules/effects/arrow-effects-kotlinx-coroutines-extensions/build.gradle
@@ -7,7 +7,8 @@ dependencies {
     compileOnly project(':arrow-meta')
     testCompileOnly project(':arrow-meta')
     testCompile project(':arrow-extras-extensions')
-    testCompile "io.kotlintest:kotlintest:$kotlinTestVersion"
+    testRuntime("org.junit.vintage:junit-vintage-engine:$jUnitVintageVersion")
+    testCompile "io.kotlintest:kotlintest-runner-junit4:$kotlinTestVersion"
     testCompile project(':arrow-test')
 
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
