--- a/modules/effects/arrow-effects-data/build.gradle
+++ b/modules/effects/arrow-effects-data/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile project(':arrow-typeclasses')
+    compile project(':arrow-extras-extensions')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     compile project(':arrow-annotations')
     kapt project(':arrow-meta')
