organize category community resources

--- a/modules/docs/arrow-docs/docs/_data/menu.yml
+++ b/modules/docs/arrow-docs/docs/_data/menu.yml
@@ -15,11 +15,8 @@ tab:
     - title: All
       url: /category/all
       
-    - title: Videos
-      url: /category/videos
+    - title: Media
+      url: /category/media
       
     - title: News
       url: /category/news
-      
-    - title: Podcast
-      url: /category/podcast
