Final renamings and redirections in place

--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -7,7 +7,7 @@ options:
         url: /docs/
 
       - title: Blogs & Presentations
-        url: /blogs/
+        url: /blog/
 
       - title: Projects & Examples
         url: /docs/quickstart/projects/
