--- a/modules/docs/arrow-docs/docs/_config.yml
+++ b/modules/docs/arrow-docs/docs/_config.yml
@@ -1,3 +1,12 @@
+# Default Front Matter values to be set
+defaults:
+  -
+    scope:
+      path: "docs/apidocs"
+      type: "pages"
+    values:
+      layout: "docs"
+
 # Plugins
 plugins:
   - jekyll-redirect-from
