--- a/modules/docs/arrow-docs/docs/_data/sidebar.yml
+++ b/modules/docs/arrow-docs/docs/_data/sidebar.yml
@@ -6,11 +6,81 @@ options:
       - title: Index
         url: /docs/
 
+      - title: Libraries
+        url: /docs/quickstart/libraries/
+
       - title: Blogs & Presentations
         url: /blog/
 
       - title: Projects & Examples
         url: /docs/quickstart/projects/
+
+  - title: API Docs
+
+    nested_options:
+
+      - title: Type Classes
+        url: /docs/apidocs/arrow-typeclasses/
+
+      - title: Core Data Types
+        url: /docs/apidocs/arrow-core-data/
+
+      - title: Core Extensions
+        url: /docs/apidocs/arrow-core-extensions/
+
+      - title: Core Extra Data Types
+        url: /docs/apidocs/arrow-extras/
+
+      - title: Core Extra Extensions
+        url: /docs/apidocs/arrow-extras-extensions/
+
+      - title: Effects
+        url: /docs/apidocs/arrow-effects-data/
+
+      - title: Effects Extensions
+        url: /docs/apidocs/arrow-effects-extensions/
+
+      - title: Effects Coroutines
+        url: /docs/apidocs/arrow-effects-kotlinx-coroutines-data/
+
+      - title: Effects Coroutines Extensions
+        url: /docs/apidocs/arrow-effects-kotlinx-coroutines-extensions/
+
+      - title: Effects Rx2
+        url: /docs/apidocs/arrow-effects-rx2-data/
+
+      - title: Effects Rx2 Extensions
+        url: /docs/apidocs/arrow-effects-rx2-extensions/
+
+      - title: Effects Reactor
+        url: /docs/apidocs/arrow-effects-reactor-data/
+
+      - title: Effects Reactor Extensions
+        url: /docs/apidocs/arrow-effects-reactor-extensions/
+
+      - title: Streams
+        url: /docs/apidocs/arrow-streams/
+
+      - title: MTL
+        url: /docs/apidocs/arrow-mtl/
+
+      - title: Optics
+        url: /docs/apidocs/arrow-optics/
+
+      - title: Recursion
+        url: /docs/apidocs/arrow-recursion-data/
+
+      - title: Recursion Extensions
+        url: /docs/apidocs/arrow-recursion-extensions/
+
+      - title: Generic
+        url: /docs/apidocs/arrow-generic/
+
+      - title: Free
+        url: /docs/apidocs/arrow-free-data/
+
+      - title: Validation
+        url: /docs/apidocs/arrow-validation/
 
   - title: Patterns
 
@@ -25,8 +95,14 @@ options:
       - title: Dependency Injection
         url: /docs/patterns/dependency_injection/
 
+      - title: The Monad Tutorial
+        url: /docs/patterns/monads/
+
       - title: Monad Comprehensions
         url: /docs/patterns/monad_comprehensions/
+
+      - title: Polymorphic Programs
+        url: /docs/patterns/polymorphic_programs/
 
       - title: Free Algebras
         url: /docs/patterns/free_algebras/
@@ -42,70 +118,91 @@ options:
         url: /docs/datatypes/basic/
 
       - title: Option
-        url: /docs/datatypes/option/
+        url: /docs/arrow/core/option/
 
       - title: Either
-        url: /docs/datatypes/either/
+        url: /docs/arrow/core/either/
 
       - title: Try
-        url: /docs/datatypes/try/
+        url: /docs/arrow/core/try/
 
       - title: Validated
-        url: /docs/datatypes/validated/
+        url: /docs/arrow/data/validated/
 
       - title: NonEmptyList
-        url: /docs/datatypes/nonemptylist/
+        url: /docs/arrow/data/nonemptylist/
 
       - title: ListK
-        url: /docs/datatypes/listk/
+        url: /docs/arrow/data/listk/
 
       - title: SequenceK
-        url: /docs/datatypes/sequencek/
+        url: /docs/arrow/data/sequencek/
 
       - title: SetK
-        url: /docs/datatypes/setk/
+        url: /docs/arrow/data/setk/
 
       - title: MapK
-        url: /docs/datatypes/mapk/
+        url: /docs/arrow/data/mapk/
 
       - title: SortedMapK
-        url: /docs/datatypes/sortedmapk/
+        url: /docs/arrow/data/sortedmapk/
 
       - title: Ior
-        url: /docs/datatypes/ior/
+        url: /docs/arrow/data/ior/
 
       - title: Id
-        url: /docs/datatypes/id/
+        url: /docs/arrow/core/id/
 
       - title: Reader
-        url: /docs/datatypes/reader/
+        url: /docs/arrow/data/reader/
 
       - title: Kleisli
-        url: /docs/datatypes/kleisli/
+        url: /docs/arrow/data/kleisli/
 
       - title: State
-        url: /docs/datatypes/state/
+        url: /docs/arrow/data/state/
 
       - title: StateT
-        url: /docs/datatypes/statet/
+        url: /docs/arrow/data/statet/
+
+      - title: Store
+        url: /docs/arrow/data/store/
+
+      - title: Moore
+        url: /docs/arrow/data/moore/
+
+      - title: Sum
+        url: /docs/arrow/data/moore/
+
+      - title: Day
+        url: /docs/arrow/data/day/
 
       - title: WriterT
-        url: /docs/datatypes/writert/
+        url: /docs/arrow/data/writert/
 
       - title: Trampoline
-        url: /docs/datatypes/trampoline/
+        url: /docs/arrow/free/trampoline/
 
       - title: Coproduct
-        url: /docs/datatypes/coproduct/
+        url: /docs/arrow/data/coproduct/
 
       - title: Eval
-        url: /docs/datatypes/eval/
+        url: /docs/arrow/core/eval/
 
       - title: OptionT
-        url: /docs/datatypes/optiont/
+        url: /docs/arrow/data/optiont/
 
       - title: EitherT
-        url: /docs/datatypes/eithert/
+        url: /docs/arrow/data/eithert/
+
+      - title: Function0
+        url: /docs/arrow/core/function0/
+
+      - title: Function1
+        url: /docs/arrow/core/function1/
+
+      - title: Const
+        url: /docs/arrow/typeclasses/const/
 
   - title: Type Classes
 
@@ -115,85 +212,97 @@ options:
         url: /docs/typeclasses/intro/
 
       - title: Show
-        url: /docs/typeclasses/show/
+        url: /docs/arrow/typeclasses/show/
 
       - title: Eq
-        url: /docs/typeclasses/eq/
+        url: /docs/arrow/typeclasses/eq/
+
+      - title: Hash
+        url: /docs/arrow/typeclasses/hash
 
       - title: Order
-        url: /docs/typeclasses/order/
+        url: /docs/arrow/typeclasses/order/
 
       - title: Semigroup
-        url: /docs/typeclasses/semigroup/
+        url: /docs/arrow/typeclasses/semigroup/
 
       - title: Monoid
-        url: /docs/typeclasses/monoid/
+        url: /docs/arrow/typeclasses/monoid/
 
       - title: Foldable
-        url: /docs/typeclasses/foldable/
+        url: /docs/arrow/typeclasses/foldable/
 
       - title: Bifoldable
-        url: /docs/typeclasses/bifoldable/
+        url: /docs/arrow/typeclasses/bifoldable/
 
       - title: Traverse
-        url: /docs/typeclasses/traverse/
+        url: /docs/arrow/typeclasses/traverse/
 
       - title: Reducible
-        url: /docs/typeclasses/reducible/
+        url: /docs/arrow/typeclasses/reducible/
 
       - title: TraverseFilter
-        url: /docs/typeclasses/traversefilter/
+        url: /docs/arrow/mtl/typeclasses/traversefilter/
 
       - title: Functor
-        url: /docs/typeclasses/functor/
+        url: /docs/arrow/typeclasses/functor/
 
       - title: FunctorFilter
-        url: /docs/typeclasses/functorfilter/
+        url: /docs/arrow/mtl/typeclasses/functorfilter/
 
       - title: Applicative
-        url: /docs/typeclasses/applicative/
+        url: /docs/arrow/typeclasses/applicative/
 
       - title: ApplicativeError
-        url: /docs/typeclasses/applicativeerror/
+        url: /docs/arrow/typeclasses/applicativeerror/
 
       - title: Monad
-        url: /docs/typeclasses/monad/
+        url: /docs/arrow/typeclasses/monad/
 
       - title: MonadError
-        url: /docs/typeclasses/monaderror/
+        url: /docs/arrow/typeclasses/monaderror/
+
+      - title: Bracket
+        url: /docs/arrow/effects/typeclasses/bracket/
 
       - title: MonadFilter
-        url: /docs/typeclasses/monadfilter/
+        url: /docs/arrow/mtl/typeclasses/monadfilter/
 
       - title: MonadReader
-        url: /docs/typeclasses/monadreader/
+        url: /docs/arrow/mtl/typeclasses/monadreader/
 
       - title: MonadWriter
-        url: /docs/typeclasses/monadwriter/
+        url: /docs/arrow/mtl/typeclasses/monadwriter/
 
       - title: MonadState
-        url: /docs/typeclasses/monadstate/
+        url: /docs/arrow/mtl/typeclasses/monadstate
 
       - title: MonadCombine
-        url: /docs/typeclasses/monadcombine/
+        url: /docs/arrow/mtl/typeclasses/monadcombine/
 
       - title: Comonad
-        url: /docs/typeclasses/comonad/
+        url: /docs/arrow/typeclasses/comonad/
 
       - title: Bimonad
-        url: /docs/typeclasses/bimonad/
+        url: /docs/arrow/typeclasses/bimonad/
+
+      - title: Bifunctor
+        url: /docs/arrow/typeclasses/bifunctor
+
+      - title: Profunctor
+        url: /docs/arrow/typeclasses/profunctor
 
       - title: SemigroupK
-        url: /docs/typeclasses/semigroupk/
+        url: /docs/arrow/typeclasses/semigroupk/
 
       - title: MonoidK
-        url: /docs/typeclasses/monoidk/
+        url: /docs/arrow/typeclasses/monoidk/
 
       - title: Inject
         url: /docs/typeclasses/inject/
 
       - title: Alternative
-        url: /docs/typeclasses/alternative/
+        url: /docs/arrow/typeclasses/alternative/
 
   - title: Effects
 
@@ -211,12 +320,18 @@ options:
       - title: Effect
         url: /docs/effects/effect/
 
+      - title: Promise
+        url: /docs/effects/promise/
+
+      - title: Ref
+        url: /docs/effects/ref/
+
   - title: Optics
 
     nested_options:
 
-      - title: Syntax DSL
-        url: /docs/optics/syntax/
+      - title: Optics DSL
+        url: /docs/optics/dsl/
 
       - title: Iso
         url: /docs/optics/iso/
@@ -242,6 +357,12 @@ options:
       - title: Traversal
         url: /docs/optics/traversal/
 
+      - title: Cons
+        url: /docs/optics/cons
+
+      - title: Snoc
+        url: /docs/optics/snoc/
+
       - title: At
         url: /docs/optics/at/
 
@@ -254,8 +375,42 @@ options:
       - title: Each
         url: /docs/optics/each/
 
+  - title: Λrrow Query Language
+
+    nested_options:
+
+      - title: Λrrow Query Language
+        url: /docs/aql/intro
+
+      - title: select
+        url: /docs/aql/select
+
+      - title: from
+        url: /docs/aql/from
+
+      - title: where
+        url: /docs/aql/where
+
+      - title: groupBy
+        url: /docs/aql/groupby
+
+      - title: orderBy
+        url: /docs/aql/orderby
+
+      - title: sum
+        url: /docs/aql/sum
+
+      - title: union
+        url: /docs/aql/union
+
+      - title: Custom Data Types
+        url: /docs/aql/custom
+
   - title: Generic
     nested_options:
+
+          - title: Coproduct
+            url: /docs/generic/coproduct
 
           - title: Product
             url: /docs/generic/product/
@@ -267,8 +422,14 @@ options:
       - title: Rx2
         url: /docs/integrations/rx2/
 
+      - title: Reactor
+        url: /docs/integrations/reactor/
+
       - title: kotlinx.coroutines
         url: /docs/integrations/kotlinxcoroutines/
+
+      - title: Retrofit
+        url: /docs/integrations/retrofit/
 
       - title: KindedJ
         url: /docs/integrations/kindedj/
@@ -296,14 +457,26 @@ options:
 
     nested_options:
 
-      - title: Corecursive
-        url: /docs/recursion/corecursive/
+      - title: Intro
+        url: /docs/recursion/intro/
 
       - title: Recursive
         url: /docs/recursion/recursive/
 
+      - title: Corecursive
+        url: /docs/recursion/corecursive/
+
       - title: Birecursive
         url: /docs/recursion/birecursive/
+
+      - title: Mu
+        url: /docs/recursion/mu/
+
+      - title: Nu
+        url: /docs/recursion/nu/
+
+      - title: Fix
+        url: /docs/recursion/fix/
 
   - title: Legal
 
