--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.jvmargs=-Xmx4g
 # Kotlin configuration
 kotlin.incremental=true
 # Kotlin Test configuration
+#Parallelism needs to be set to 1 since the concurrent tests in arrow-effects become flaky otherwise
 kotlintest.parallelism=1
 # Pomfile definitions
 POM_DESCRIPTION=Functional companion to Kotlin's Standard Library
